# ckb-miner

./: .gitignore  Cargo.toml  README.md  ckb-miner.toml  rustfmt.toml
ckb-core/src/: lib.rs
miner/: Cargo.toml  build.rs
miner/src/: client.rs  config.rs  lib.rs  miner.rs
miner/src/worker/: blake2b.c  blake2b.h  cuckoo.rs  cuckoo_gpu.rs  eaglesong.rs  eaglesong_cl.rs  eaglesong_cuda.rs  eaglesong_gpu.rs  mod.rs
miner/src/worker/include/: blake2-config.h  blake2.h  blake2b.c  blake2b.h  cuckoo-avx512.c  cuckoo.c  cuckoo.cu  cuckoo.lib  eaglesong.c  eaglesong.cu  eaglesong_avx2.c  eaglesong_avx512.c  eaglesong_cl.cpp  portable_endian.h
src/: exit_code.rs  main.rs  sentry.rs
util/jsonrpc-types/: Cargo.toml
util/jsonrpc-types/src/: blockchain.rs  lib.rs
