[package]
name = "ckb-miner"
version = "0.23.0-rc1"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[profile.release]
debug = false
overflow-checks = true

[dependencies]
miner = { path = "miner" }
toml = "0.5"
crossbeam-channel = "0.3"
ckb-logger = { tag = "v0.23.0-rc1", git = "https://github.com/nervosnetwork/ckb", package = "ckb-logger" }
ckb-build-info = { tag = "v0.23.0-rc1", git = "https://github.com/nervosnetwork/ckb", package = "ckb-build-info" }
sentry = "^0.15.4"
serde = "1.0"
serde_derive = "1.0"

[features]
cuda = ["miner/cuda"]
opencl = ["miner/opencl"]