[package]
name = "miner"
version = "0.21.1"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
ckb_types = { tag = "v0.21.1", git = "https://github.com/nervosnetwork/ckb", package = "ckb-types" }
ckb-logger = { tag = "v0.21.1", git = "https://github.com/nervosnetwork/ckb", package = "ckb-logger" }
ckb-util = { tag = "v0.21.1", git = "https://github.com/nervosnetwork/ckb", package = "ckb-util" }
ckb-jsonrpc-types = { tag = "v0.21.1", git = "https://github.com/nervosnetwork/ckb", package = "ckb-jsonrpc-types" }
ckb-stop-handler = { tag = "v0.21.1", git = "https://github.com/nervosnetwork/ckb", package = "ckb-stop-handler" }
faketime = "0.2.0"
rand = "0.6"
byteorder = "1.3.1"
serde = "1.0"
serde_derive = "1.0"
crossbeam-channel = "0.3"
fnv = "1.0.3"
serde_json = "1.0"
hyper = "0.12"
futures = "0.1"
lru-cache = { git = "https://github.com/nervosnetwork/lru-cache", rev = "a35fdb8" }
failure = "0.1.5"
indicatif = "0.11"
console = "0.7.5"

[dev-dependencies]
proptest = "0.9"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3.15"

[features]
cuda = []
opencl = []